Fix checkbox on story and add z-index

--- a/src/components/Dropdown/_Dropdown.scss
+++ b/src/components/Dropdown/_Dropdown.scss
@@ -10,6 +10,7 @@
     position: absolute;
     transition: all 0.35s;
     width: 259px;
+    z-index: 1;
   }
 
   &__label {
